Use svg element instead of va-icon to show new icon. Prevent contents from shifting when switching files

--- a/packages/web-components/src/components/va-file-input/va-file-input.scss
+++ b/packages/web-components/src/components/va-file-input/va-file-input.scss
@@ -171,6 +171,11 @@ va-button {
     line-height: 1.15;
   }
 
+  .thumbnail-container {
+    height: 40px;
+    width: 40px;
+  }
+
   .thumbnail-preview {
     max-width: 40px;
     width: auto;
